Correct Pages 02 and 06
Page 02: Box at the end of the page was removed among with its link.

Page 06: "Read our home muscle-st rengthening plan at saga.co.uk/falls"
was changed to "'Read our home muscle strengthening plan at
saga.co.uk/falls".

Page AllInOne: All changes were reflected to this page.

--- a/06.html
+++ b/06.html
@@ -57,9 +57,9 @@ see someone to discuss it.<br></p>
                     <img src="img/6a.jpg" class="img-responsive"> 
                 </div>                 
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
-                    <img src="img/logo01.jpg">Read our home muscle-st
-                    rengthening plan at  
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                    <img src="img/logo01.jpg">Read our home muscle
+                    strengthening plan at
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
                 </div>                 
             </div>             
         </div>         
