--- a/AllInOne.html
+++ b/AllInOne.html
@@ -27,8 +27,8 @@
             </div>             
         </div> 
 		<!--//////////////////////////////////////PAGE 02///////////////////////////////////////-->
-		<div class="container"> 
-            <div class="row white" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2;"> 
+        <div class="container"> 
+            <div class="row white" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2; height: 550px;"> 
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1>Contents</h1> 
                     <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#01">Introduction</a></p> 
@@ -45,16 +45,9 @@
                     <p><img src="img/bullet07.png" class="bullet-spacing"><a href="#12">How to help if someone has fallen</a><br></p> 
                     <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#13">Summary: key messages</a><br></p> 
                     <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#14">Useful contacts</a><br></p> 
-                </div>                 
-                <div class="col-sm-12 col-xs-12 col-md-10 col-lg-10"> 
-                    <div class="clear-highlighted-box"> 
-                        <p><b>Test yourself!</b></p> 
-                        <p>Suspect you’re slowing down? Take the timed online Get Up&nbsp;and Go test to see if you could be steadier on your pins.<br></p> 
-                        <p>Visit <a href="http://www.csp.org.uk/timedupandgo" target="_blank">www.csp.org.uk/timedupandgo</a> to ﬁnd out more<br></p> 
-                    </div>                     
-                </div>                 
+                </div>                                  
             </div>             
-        </div> 
+        </div>  
 		<!--//////////////////////////////////////PAGE 03///////////////////////////////////////-->
 		<a name="01"></a> 
         <div class="container"> 
@@ -306,12 +299,12 @@ see someone to discuss it.<br></p>
                     <img src="img/6a.jpg" class="img-responsive"> 
                 </div>                 
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
-                    <img src="img/logo01.jpg">Read our home muscle-st
-                    rengthening plan at  
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                    <img src="img/logo01.jpg">Read our home muscle
+                    strengthening plan at
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
                 </div>                 
             </div>             
-        </div> 
+        </div>   
 		<!--//////////////////////////////////////PAGE 07///////////////////////////////////////-->
         <div class="container">
             <div class="row" style="background-image: url(&quot;img/07a.jpg&quot;); background-color: #D69E26;">
