--- a/02.html
+++ b/02.html
@@ -19,7 +19,7 @@
     </head>     
     <body class=""> 
         <div class="container"> 
-            <div class="row white" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2;"> 
+            <div class="row white" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2; height: 550px;"> 
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1>Contents</h1> 
                     <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#01">Introduction</a></p> 
@@ -36,14 +36,7 @@
                     <p><img src="img/bullet07.png" class="bullet-spacing"><a href="#12">How to help if someone has fallen</a><br></p> 
                     <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#13">Summary: key messages</a><br></p> 
                     <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#14">Useful contacts</a><br></p> 
-                </div>                 
-                <div class="col-sm-12 col-xs-12 col-md-10 col-lg-10"> 
-                    <div class="clear-highlighted-box"> 
-                        <p><b>Test yourself!</b></p> 
-                        <p>Suspect you’re slowing down? Take the timed online Get Up&nbsp;and Go test to see if you could be steadier on your pins.<br></p> 
-                        <p>Visit <a href="http://www.csp.org.uk/timedupandgo" target="_blank">www.csp.org.uk/timedupandgo</a> to ﬁnd out more<br></p> 
-                    </div>                     
-                </div>                 
+                </div>                                  
             </div>             
         </div>         
         <!-- Bootstrap core JavaScript
